# agenttg

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/commands/: agenttg-usage.md
.claude/skills/agenttg-usage/: SKILL.md
.github/workflows/: ci.yml
scripts/: install_deps_local.sh
src/agenttg/: __init__.py  api.py  constants.py  formatting.py  table_to_png.py  types.py
src/agenttg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api_unit.py  test_e2e.py  test_formatting.py
